# clvt_projekat

./: Dockerfile  Poetry_testing_podsetnik.txt  distributions.csv  pyproject.toml  test.py
projekat/: finalni_projekat.py  test3.py  threaded_version.py
tests/functional/: data.csv  test_functions.py
