[tool.poetry]
name = "projekat"
version = "0.1.0"
description = ""
authors = ["UrosRiznic <urosriznic@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
numpy = "^1.24.2"
psycopg2 = "^2.9.6"
pytest = "^7.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
